[project]
name = "fltr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.177.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "dask>=2023.10.0",
    "distributed>=2023.10.0",
    "python-dateutil>=2.8.0",
]
